# YesodTemplate

./: .gitignore  Application.hs  Gemfile  Guardfile  HaskellTemplate.cabal  YesodTemplate.cabal  cabal.config  circle.yml  guard.sh  stack.yaml
app/: devel.hs
config/: keter.yml  settings.yml  sqlite.yml  test-settings.yml
src/: Foo.hs
test/: FooSpec.hs  TestImport.hs
